# glensing-rays

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
RayTracer/: RayTracer.sln  converter.sh
RayTracer/Debug/: RayTracer.ilk
RayTracer/RayTracer/: GravitationalEntity.cpp  GravitationalEntity.h  RayTracer.cpp  RayTracer.vcxproj  RayTracer.vcxproj.filters  RungeKuttaSolver.cpp  RungeKuttaSolver.h  Sphere.h  olcPixelGameEngine.h  v3d.cpp  v3d.h
RayTracer/RayTracer/Debug/: vc142.idb
RayTracer/RayTracer/Debug/RayTracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RayTracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: CMakeLists.txt  RungeKuttaSolver.cpp  RungeKuttaSolver.h  Sphere.cpp  Sphere.h  olcPixelGameEngine.h  v3d.h
src/LegacyRayTracer/: CMakeLists.txt  GravitationalEntity.cpp  GravitationalEntity.h  RayTracer.cpp  RungeKuttaSolver.cpp  RungeKuttaSolver.h  Sphere.h
src/common/: CMakeLists.txt  v3d.cpp  v3d.h
src/glTests/: CMakeLists.txt  main.cpp
